--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,9 +5,44 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black; /* Black background */
+  color: white; /* White text color */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.card {
+  background-color: #333; /* Dark background for cards */
+  color: #fff; /* White text color for cards */
+}
+
+.card-title, .card-subtitle, .card p {
+  color: wheat; /* Ensure text inside cards is white */
+}
+
+.dropdown-menu {
+  background-color: #333; /* Dark background for dropdown */
+  color: #fff; /* White text color for dropdown */
+}
+
+.dropdown-item {
+  color: #fff; /* White text color for dropdown items */
+}
+
+.dropdown-item:hover {
+  background-color: #555; /* Slightly lighter background on hover */
+}
+
+.squad-card-img::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50%; /* Adjust the height as needed */
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+  pointer-events: none; /* Ensure the overlay doesn't interfere with interactions */
 }
